# hammer-mcp-server

./: .gitignore  README.md  pyproject.toml
src/hammer_mcp_server/: __init__.py  server.py
src/hammer_mcp_server/data/: hammer_basic_information.md  hammer_organization_annotated_help.md
src/hammer_mcp_server/resources/: __init__.py  hammer_docs.py  hammer_resources.py
src/hammer_mcp_server/tools/: __init__.py  call_hammer_commands.py
src/hammer_mcp_server/utils/: __init__.py  hammer_utils.py
