[project]
name = "hammer-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server implementation that enables LLMs to interact with Hammer CLI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastmcp>=2.10.2",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
]

[project.scripts]
hammer-mcp-server = "hammer_mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
    "venv",
]

line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E4",   # pycodestyle errors
    "E7",   # pycodestyle errors
    "E9",   # pycodestyle errors
    "F",    # Pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
]

ignore = [
    "E501",  # Line too long, handled by formatter
    "T201",  # Allow print statements
    "T203",  # Allow pprint statements
]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
